added default config to Mecha